crates/haneul-config/tests/snapshots/snapshot_tests__genesis_config_snapshot_matches.snap
---
source: crates/haneul-config/tests/snapshot_tests.rs
expression: genesis_config
---
validator_genesis_info: ~
parameters:
  chain_id: 127
committee_size: 4
grpc_load_shed: ~
grpc_concurrency_limit: 20000000000
accounts:
  - address: 33d3e552666edc4f048c74e0d2776d0b18171e31
    gas_objects:
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
    gas_object_ranges: []
  - address: 33d3e552666edc4f048c74e0d2776d0b18171e31
    gas_objects:
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
    gas_object_ranges: []
  - address: 33d3e552666edc4f048c74e0d2776d0b18171e31
    gas_objects:
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
    gas_object_ranges: []
  - address: 33d3e552666edc4f048c74e0d2776d0b18171e31
    gas_objects:
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
    gas_object_ranges: []
  - address: 33d3e552666edc4f048c74e0d2776d0b18171e31
    gas_objects:
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
      - object_id: "0x33d3e552666edc4f048c74e0d2776d0b18171e31"
        gas_value: 100000000000000
    gas_object_ranges: []

