crates/haneul-config/tests/snapshots/snapshot_tests__populated_genesis_snapshot_matches-2.snap
---
source: crates/haneul-config/tests/snapshot_tests.rs
expression: genesis.haneul_system_object().into_genesis_version_for_tooling()
---
epoch: 0
protocol_version: 9
system_state_version: 1
validators:
  total_stake: 20000000000000000
  active_validators:
    - metadata:
        haneul_address: "0x60307f36c284875bf298d4d85a673046648b1ac4b47e712e42ab10d57dd77a26"
        protocol_pubkey_bytes:
          - 153
          - 242
          - 94
          - 246
          - 31
          - 128
          - 50
          - 185
          - 20
          - 99
          - 100
          - 96
          - 152
          - 44
          - 92
          - 198
          - 241
          - 52
          - 239
          - 29
          - 218
          - 231
          - 102
          - 87
          - 242
          - 203
          - 254
          - 193
          - 235
          - 252
          - 141
          - 9
          - 115
          - 116
          - 8
          - 13
          - 246
          - 252
          - 240
          - 220
          - 184
          - 188
          - 75
          - 13
          - 142
          - 10
          - 245
          - 216
          - 14
          - 187
          - 255
          - 43
          - 76
          - 89
          - 159
          - 84
          - 244
          - 45
          - 99
          - 18
          - 223
          - 195
          - 20
          - 39
          - 96
          - 120
          - 193
          - 204
          - 52
          - 126
          - 187
          - 190
          - 197
          - 25
          - 139
          - 226
          - 88
          - 81
          - 63
          - 56
          - 107
          - 147
          - 13
          - 2
          - 194
          - 116
          - 154
          - 128
          - 62
          - 35
          - 48
          - 149
          - 94
          - 189
          - 26
          - 16
        network_pubkey_bytes:
          - 148
          - 228
          - 168
          - 73
          - 49
          - 68
          - 233
          - 230
          - 150
          - 32
          - 140
          - 190
          - 208
          - 2
          - 89
          - 230
          - 221
          - 181
          - 111
          - 151
          - 155
          - 145
          - 195
          - 41
          - 103
          - 86
          - 9
          - 133
          - 190
          - 97
          - 144
          - 155
        worker_pubkey_bytes:
          - 31
          - 42
          - 121
          - 1
          - 168
          - 66
          - 228
          - 211
          - 98
          - 59
          - 198
          - 28
          - 225
          - 193
          - 113
          - 125
          - 46
          - 118
          - 142
          - 15
          - 215
          - 45
          - 248
          - 52
          - 26
          - 245
          - 102
          - 21
          - 185
          - 22
          - 240
          - 56
        proof_of_possession_bytes:
          - 151
          - 191
          - 31
          - 245
          - 62
          - 131
          - 184
          - 23
          - 162
          - 33
          - 124
          - 71
          - 229
          - 10
          - 56
          - 179
          - 47
          - 67
          - 223
          - 65
          - 196
          - 125
          - 67
          - 111
          - 55
          - 104
          - 114
          - 157
          - 166
          - 146
          - 6
          - 104
          - 90
          - 214
          - 33
          - 36
          - 63
          - 93
          - 228
          - 221
          - 166
          - 7
          - 164
          - 61
          - 169
          - 219
          - 78
          - 19
        name: "0"
        description: ""
        image_url: ""
        project_url: ""
        net_address: /ip4/127.0.0.1/tcp/80
        p2p_address: /ip4/127.0.0.1/udp/80
        primary_address: /ip4/127.0.0.1/udp/80
        worker_address: /ip4/127.0.0.1/udp/80
        next_epoch_protocol_pubkey_bytes: ~
        next_epoch_proof_of_possession: ~
        next_epoch_network_pubkey_bytes: ~
        next_epoch_worker_pubkey_bytes: ~
        next_epoch_net_address: ~
        next_epoch_p2p_address: ~
        next_epoch_primary_address: ~
        next_epoch_worker_address: ~
        extra_fields:
          id:
            id: "0x30e905e8ed440f086add0396e43cef81d2a17c63f841ed2bdd0b037a77e7f2d7"
          size: 0
      voting_power: 10000
      operation_cap_id: "0x5b50a9e7837cc3c8a92e5a883766d9e7817fe462a72900d4705f63461ae7930e"
      gas_price: 1000
      staking_pool:
        id: "0x3cef99c3d4d2b6211b044018f2a8ed3e0b3d2745bec05a396ed3e83d97a8c3ea"
        activation_epoch: 0
        deactivation_epoch: ~
        haneul_balance: 20000000000000000
        rewards_pool:
          value: 0
        pool_token_balance: 20000000000000000
        exchange_rates:
          id: "0xc5b87d749354ab84ae4b7a297de46a384dff08b1bc9b704dc5dddc4377477c02"
          size: 1
        pending_stake: 0
        pending_total_haneul_withdraw: 0
        pending_pool_token_withdraw: 0
        extra_fields:
          id:
            id: "0x95f776c5b00015cb39981fb64deaadb1bee81fbadabdc496a0ad7557d11aadb8"
          size: 0
      commission_rate: 200
      next_epoch_stake: 20000000000000000
      next_epoch_gas_price: 1000
      next_epoch_commission_rate: 200
      extra_fields:
        id:
          id: "0x5bb4decca060792970e7c968b2d536633387f6950b7e0e75014c9903ff3b93b7"
        size: 0
  pending_active_validators:
    contents:
      id: "0x3d7be1644705cbcf3ce4d28b54e99e561f4adad1c0185cefcdf9a10a1c1b8e08"
      size: 0
  pending_removals: []
  staking_pool_mappings:
    id: "0xfeef6b346a96123418b5f59231c8f72c716ec5501e47a52ed52dca39d323093f"
    size: 1
  inactive_validators:
    id: "0x8fb83c6ca04714baeb525a27f667388ca2c9d7214f1f6dbc60187c07b653f869"
    size: 0
  validator_candidates:
    id: "0x3d327eb43e54b979e94e37084a0f802ac6fdf120f42255dbac34629eb2414236"
    size: 0
  at_risk_validators:
    contents: []
  extra_fields:
    id:
      id: "0x1cd0eef95f0cab29bbbc9b18a61ece52dfb56fb3418bf95bafc69ea844d2a6d1"
    size: 0
storage_fund:
  total_object_storage_rebates:
    value: 0
  non_refundable_balance:
    value: 0
parameters:
  epoch_duration_ms: 86400000
  stake_subsidy_start_epoch: 0
  max_validator_count: 150
  min_validator_joining_stake: 30000000000000000
  validator_low_stake_threshold: 20000000000000000
  validator_very_low_stake_threshold: 15000000000000000
  validator_low_stake_grace_period: 7
  extra_fields:
    id:
      id: "0x0e11835946b61db2da76054472398a72c60a81bd1a59b32ee4e58d992a518a64"
    size: 0
reference_gas_price: 1000
validator_report_records:
  contents: []
stake_subsidy:
  balance:
    value: 9230000000000000000
  distribution_counter: 0
  current_distribution_amount: 1000000000000000
  stake_subsidy_period_length: 30
  stake_subsidy_decrease_rate: 10000
  extra_fields:
    id:
      id: "0x6bca6274aeaf6e1afaea8b5d9931b5cfa91105f8c48356dd070c8ce9055d3f58"
    size: 0
safe_mode: false
safe_mode_storage_rewards:
  value: 0
safe_mode_computation_rewards:
  value: 0
safe_mode_storage_rebates: 0
safe_mode_non_refundable_storage_fee: 0
epoch_start_timestamp_ms: 10
extra_fields:
  id:
    id: "0x399908cdd5045d10bf1f59e600197c4f4f9c46264b3e7b9c1997f1693aead1f8"
  size: 0

